Updated db structure