@@ -1,7 +1,7 @@
 package ormvat.sadsa.service.agent_antenne;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -41,7 +41,6 @@ public class DocumentFillingService {
     private final DocumentRequisRepository documentRequisRepository;
     private final PieceJointeRepository pieceJointeRepository;
     private final UtilisateurRepository utilisateurRepository;
-    private final AuditTrailRepository auditTrailRepository;
     private final ObjectMapper objectMapper;
 
     @Value("${app.upload.dir:./uploads/ormvat_sadsa}")
@@ -58,7 +57,7 @@ public class DocumentFillingService {
     }
 
     /**
-     * Get dossier with its documents requis and uploaded files
+     * Get dossier with its documents requis and pieces jointes
      */
     public DossierDocumentsResponse getDossierDocuments(Long dossierId, String userEmail) {
         try {
@@ -75,13 +74,12 @@ public class DocumentFillingService {
             List<DocumentRequis> documentsRequis = documentRequisRepository
                     .findBySousRubriqueId(dossier.getSousRubrique().getId());
 
-            DossierSummaryDTO dossierSummary = buildDossierSummary(dossier, userEmail);
-            List<DocumentRequisWithFilesDTO> documentsWithFiles = documentsRequis.stream()
-                    .map(doc -> buildDocumentWithFiles(doc, dossierId))
+            DossierSummaryDTO dossierSummary = buildDossierSummary(dossier, utilisateur);
+            List<DocumentWithPiecesDTO> documentsWithPieces = documentsRequis.stream()
+                    .map(doc -> buildDocumentWithPieces(doc, dossierId))
                     .collect(Collectors.toList());
-            DocumentStatisticsDTO statistics = calculateStatistics(documentsWithFiles);
+            DocumentStatisticsDTO statistics = calculateStatistics(documentsWithPieces);
 
-            // Build navigation info
             NavigationInfoDTO navigationInfo = NavigationInfoDTO.builder()
                     .backUrl("/api/dossiers/" + dossierId)
                     .dossierDetailUrl("/api/dossiers/" + dossierId)
@@ -93,7 +91,7 @@ public class DocumentFillingService {
 
             return DossierDocumentsResponse.builder()
                     .dossier(dossierSummary)
-                    .documentsRequis(documentsWithFiles)
+                    .documentsRequis(documentsWithPieces)
                     .statistics(statistics)
                     .navigationInfo(navigationInfo)
                     .build();
@@ -105,11 +103,12 @@ public class DocumentFillingService {
     }
 
     /**
-     * Upload a file for a specific document requis
+     * Upload a scanned document file
      */
     @Transactional
-    public UploadDocumentResponse uploadDocument(Long dossierId, Long documentRequisId, 
-                                               MultipartFile file, String userEmail) {
+    public UploadDocumentResponse uploadScannedDocument(Long dossierId, Long documentRequisId, 
+                                                       MultipartFile file, String title, 
+                                                       String description, String userEmail) {
         try {
             Dossier dossier = dossierRepository.findById(dossierId)
                     .orElseThrow(() -> new RuntimeException("Dossier non trouvé"));
@@ -124,34 +123,35 @@ public class DocumentFillingService {
                 throw new RuntimeException("Accès non autorisé");
             }
 
-            String subDirectory = createDossierDirectory(dossierId);
-            String filePath = storeFile(file, subDirectory);
+            String filePath = storeFile(file, dossierId, "documents");
 
             PieceJointe pieceJointe = new PieceJointe();
-            pieceJointe.setNomFichier(file.getOriginalFilename());
-            pieceJointe.setCheminFichier(filePath);
-            pieceJointe.setTypeDocument(documentRequis.getNomDocument());
-            pieceJointe.setStatus(PieceJointe.DocumentStatus.COMPLETE);
-            pieceJointe.setDateUpload(LocalDateTime.now());
             pieceJointe.setDossier(dossier);
             pieceJointe.setDocumentRequis(documentRequis);
             pieceJointe.setUtilisateur(utilisateur);
+            pieceJointe.setDocumentType(PieceJointe.DocumentType.SCANNED_DOCUMENT);
+            pieceJointe.setNomFichier(file.getOriginalFilename());
+            pieceJointe.setCheminFichier(filePath);
+            pieceJointe.setTitle(title);
+            pieceJointe.setDescription(description);
+            pieceJointe.setStatus(PieceJointe.DocumentStatus.COMPLETE);
+            pieceJointe.setDateUpload(LocalDateTime.now());
+            pieceJointe.setIsRequired(documentRequis.getObligatoire());
 
             PieceJointe savedPieceJointe = pieceJointeRepository.save(pieceJointe);
 
-            createAuditTrail("UPLOAD_DOCUMENT", dossierId, 
-                    "Upload document: " + file.getOriginalFilename() + " pour " + documentRequis.getNomDocument(), 
-                    userEmail);
-
-            log.info("Document uploadé avec succès - Dossier: {}, Fichier: {}, Utilisateur: {}", 
+            log.info("Document scanné uploadé avec succès - Dossier: {}, Fichier: {}, Utilisateur: {}", 
                     dossierId, file.getOriginalFilename(), userEmail);
 
+            PieceJointeDTO pieceDTO = mapToPieceJointeDTO(savedPieceJointe);
+            DocumentProgressDTO progress = calculateDocumentProgress(documentRequisId, dossierId);
+
             return UploadDocumentResponse.builder()
-                    .pieceJointeId(savedPieceJointe.getId())
-                    .nomFichier(savedPieceJointe.getNomFichier())
-                    .cheminFichier(savedPieceJointe.getCheminFichier())
                     .success(true)
                     .message("Document uploadé avec succès")
+                    .uploadedPiece(pieceDTO)
+                    .updatedProgress(progress)
+                    .timestamp(LocalDateTime.now())
                     .build();
 
         } catch (Exception e) {
@@ -161,7 +161,7 @@ public class DocumentFillingService {
     }
 
     /**
-     * Save form data for a document requis - Fixed to properly update existing files
+     * Save form data directly as JSON
      */
     @Transactional
     public SaveFormDataResponse saveFormData(SaveFormDataRequest request, String userEmail) {
@@ -179,34 +179,55 @@ public class DocumentFillingService {
                 throw new RuntimeException("Accès non autorisé");
             }
 
-            String subDirectory = createDossierDirectory(request.getDossierId());
-            
-            // Find existing form data piece jointe or create new one
-            PieceJointe formDataPieceJointe = findOrCreateFormDataPieceJointe(
-                    dossier, documentRequis, utilisateur);
+            // Check if form data already exists for this document
+            Optional<PieceJointe> existingPiece = pieceJointeRepository
+                    .findExistingFormData(request.getDossierId(), request.getDocumentRequisId());
 
-            // Save/Update form data as JSON file (properly replace existing)
-            String formDataFilePath = saveOrUpdateFormDataAsJsonFile(
-                    request.getFormData(), subDirectory, 
-                    documentRequis.getNomDocument(), 
-                    request.getDossierId(), 
-                    request.getDocumentRequisId(),
-                    formDataPieceJointe.getCheminDonneesFormulaire());
+            PieceJointe pieceJointe;
+            boolean isUpdate = false;
 
-            formDataPieceJointe.setCheminDonneesFormulaire(formDataFilePath);
-            formDataPieceJointe.setDateUpload(LocalDateTime.now()); // Update timestamp
-            pieceJointeRepository.save(formDataPieceJointe);
+            if (existingPiece.isPresent()) {
+                // Update existing form data
+                pieceJointe = existingPiece.get();
+                pieceJointe.setFormDataFromMap(request.getFormData());
+                if (request.getTitle() != null) {
+                    pieceJointe.setTitle(request.getTitle());
+                }
+                if (request.getDescription() != null) {
+                    pieceJointe.setDescription(request.getDescription());
+                }
+                pieceJointe.setStatus(PieceJointe.DocumentStatus.COMPLETE);
+                isUpdate = true;
+                log.info("Updated existing form data for dossier {} document {}", 
+                        request.getDossierId(), request.getDocumentRequisId());
+            } else {
+                // Create new form data entry
+                pieceJointe = new PieceJointe();
+                pieceJointe.setDossier(dossier);
+                pieceJointe.setDocumentRequis(documentRequis);
+                pieceJointe.setUtilisateur(utilisateur);
+                pieceJointe.setDocumentType(PieceJointe.DocumentType.FORM_DATA);
+                pieceJointe.setFormDataFromMap(request.getFormData());
+                pieceJointe.setTitle(request.getTitle() != null ? request.getTitle() : "Données formulaire - " + documentRequis.getNomDocument());
+                pieceJointe.setDescription(request.getDescription() != null ? request.getDescription() : "Données saisies par l'agent");
+                pieceJointe.setStatus(PieceJointe.DocumentStatus.COMPLETE);
+                pieceJointe.setDateUpload(LocalDateTime.now());
+                pieceJointe.setIsRequired(documentRequis.getObligatoire());
+                log.info("Created new form data for dossier {} document {}", 
+                        request.getDossierId(), request.getDocumentRequisId());
+            }
 
-            createAuditTrail("SAVE_FORM_DATA", request.getDossierId(), 
-                    "Sauvegarde données formulaire: " + documentRequis.getNomDocument(), userEmail);
+            PieceJointe savedPieceJointe = pieceJointeRepository.save(pieceJointe);
 
-            log.info("Données formulaire sauvegardées - Dossier: {}, Document: {}, Fichier: {}, Utilisateur: {}", 
-                    request.getDossierId(), documentRequis.getNomDocument(), formDataFilePath, userEmail);
+            PieceJointeDTO pieceDTO = mapToPieceJointeDTO(savedPieceJointe);
+            DocumentProgressDTO progress = calculateDocumentProgress(request.getDocumentRequisId(), request.getDossierId());
 
             return SaveFormDataResponse.builder()
                     .success(true)
-                    .message("Données du formulaire sauvegardées avec succès")
-                    .savedData(request.getFormData())
+                    .message(isUpdate ? "Données du formulaire mises à jour avec succès" : "Données du formulaire sauvegardées avec succès")
+                    .savedPiece(pieceDTO)
+                    .updatedProgress(progress)
+                    .timestamp(LocalDateTime.now())
                     .build();
 
         } catch (Exception e) {
@@ -216,10 +237,69 @@ public class DocumentFillingService {
     }
 
     /**
-     * Delete an uploaded document
+     * Save mixed document (file + form data)
      */
     @Transactional
-    public void deleteDocument(Long pieceJointeId, String userEmail) {
+    public UploadDocumentResponse saveMixedDocument(Long dossierId, Long documentRequisId,
+                                                   MultipartFile file, SaveMixedDocumentRequest request, 
+                                                   String userEmail) {
+        try {
+            Dossier dossier = dossierRepository.findById(dossierId)
+                    .orElseThrow(() -> new RuntimeException("Dossier non trouvé"));
+            
+            DocumentRequis documentRequis = documentRequisRepository.findById(documentRequisId)
+                    .orElseThrow(() -> new RuntimeException("Document requis non trouvé"));
+
+            Utilisateur utilisateur = utilisateurRepository.findByEmail(userEmail)
+                    .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
+
+            if (!canModifyDossier(dossier, utilisateur)) {
+                throw new RuntimeException("Accès non autorisé");
+            }
+
+            String filePath = storeFile(file, dossierId, "documents");
+
+            PieceJointe pieceJointe = new PieceJointe();
+            pieceJointe.setDossier(dossier);
+            pieceJointe.setDocumentRequis(documentRequis);
+            pieceJointe.setUtilisateur(utilisateur);
+            pieceJointe.setDocumentType(PieceJointe.DocumentType.MIXED);
+            pieceJointe.setNomFichier(file.getOriginalFilename());
+            pieceJointe.setCheminFichier(filePath);
+            pieceJointe.setFormDataFromMap(request.getFormData());
+            pieceJointe.setTitle(request.getTitle());
+            pieceJointe.setDescription(request.getDescription());
+            pieceJointe.setStatus(PieceJointe.DocumentStatus.COMPLETE);
+            pieceJointe.setDateUpload(LocalDateTime.now());
+            pieceJointe.setIsRequired(documentRequis.getObligatoire());
+
+            PieceJointe savedPieceJointe = pieceJointeRepository.save(pieceJointe);
+
+            log.info("Document mixte sauvegardé avec succès - Dossier: {}, Fichier: {}, Utilisateur: {}", 
+                    dossierId, file.getOriginalFilename(), userEmail);
+
+            PieceJointeDTO pieceDTO = mapToPieceJointeDTO(savedPieceJointe);
+            DocumentProgressDTO progress = calculateDocumentProgress(documentRequisId, dossierId);
+
+            return UploadDocumentResponse.builder()
+                    .success(true)
+                    .message("Document mixte sauvegardé avec succès")
+                    .uploadedPiece(pieceDTO)
+                    .updatedProgress(progress)
+                    .timestamp(LocalDateTime.now())
+                    .build();
+
+        } catch (Exception e) {
+            log.error("Erreur lors de la sauvegarde du document mixte", e);
+            throw new RuntimeException("Erreur lors de la sauvegarde: " + e.getMessage());
+        }
+    }
+
+    /**
+     * Delete a piece jointe
+     */
+    @Transactional
+    public DeleteDocumentResponse deleteDocument(Long pieceJointeId, String userEmail) {
         try {
             PieceJointe pieceJointe = pieceJointeRepository.findById(pieceJointeId)
                     .orElseThrow(() -> new RuntimeException("Document non trouvé"));
@@ -231,25 +311,31 @@ public class DocumentFillingService {
                 throw new RuntimeException("Accès non autorisé");
             }
 
+            Long documentRequisId = pieceJointe.getDocumentRequis() != null ? 
+                    pieceJointe.getDocumentRequis().getId() : null;
+            Long dossierId = pieceJointe.getDossier().getId();
             String fileName = pieceJointe.getNomFichier();
             String filePath = pieceJointe.getCheminFichier();
-            String formDataPath = pieceJointe.getCheminDonneesFormulaire();
-            Long dossierId = pieceJointe.getDossier().getId();
 
+            // Delete physical file if exists
             if (filePath != null) {
                 deleteFile(filePath);
-            }
-            if (formDataPath != null) {
-                deleteFile(formDataPath);
             }
 
             pieceJointeRepository.delete(pieceJointe);
 
-            createAuditTrail("DELETE_DOCUMENT", dossierId, 
-                    "Suppression document: " + fileName, userEmail);
-
             log.info("Document supprimé - ID: {}, Fichier: {}, Utilisateur: {}", 
                     pieceJointeId, fileName, userEmail);
+
+            DocumentProgressDTO progress = documentRequisId != null ? 
+                    calculateDocumentProgress(documentRequisId, dossierId) : null;
+
+            return DeleteDocumentResponse.builder()
+                    .success(true)
+                    .message("Document supprimé avec succès")
+                    .updatedProgress(progress)
+                    .timestamp(LocalDateTime.now())
+                    .build();
 
         } catch (Exception e) {
             log.error("Erreur lors de la suppression du document", e);
@@ -258,7 +344,7 @@ public class DocumentFillingService {
     }
 
     /**
-     * Download an uploaded document
+     * Download a document
      */
     public ResponseEntity<Resource> downloadDocument(Long pieceJointeId, String userEmail) {
         try {
@@ -283,9 +369,6 @@ public class DocumentFillingService {
                 contentType = "application/octet-stream";
             }
 
-            createAuditTrail("DOWNLOAD_DOCUMENT", pieceJointe.getDossier().getId(), 
-                    "Téléchargement document: " + pieceJointe.getNomFichier(), userEmail);
-
             log.info("Document téléchargé - ID: {}, Fichier: {}, Utilisateur: {}", 
                     pieceJointeId, pieceJointe.getNomFichier(), userEmail);
 
@@ -301,7 +384,7 @@ public class DocumentFillingService {
         }
     }
 
-    // Private helper methods for access control
+    // Helper methods
     private boolean canAccessDossier(Dossier dossier, Utilisateur utilisateur) {
         switch (utilisateur.getRole()) {
             case ADMIN:
@@ -334,75 +417,214 @@ public class DocumentFillingService {
                dossier.getStatus() == Dossier.DossierStatus.RETURNED_FOR_COMPLETION;
     }
 
-    private PieceJointe findOrCreateFormDataPieceJointe(Dossier dossier, DocumentRequis documentRequis, Utilisateur utilisateur) {
-        // Look for existing form data piece jointe
-        Optional<PieceJointe> existingPieceJointe = pieceJointeRepository
-                .findByDossierIdAndDocumentRequisId(dossier.getId(), documentRequis.getId())
-                .stream()
-                .filter(pj -> pj.getCheminDonneesFormulaire() != null)
-                .findFirst();
+    private DossierSummaryDTO buildDossierSummary(Dossier dossier, Utilisateur utilisateur) {
+        boolean canEdit = canModifyDossier(dossier, utilisateur);
+        boolean canSubmit = canEdit && dossier.getStatus() == Dossier.DossierStatus.DRAFT;
         
-        if (existingPieceJointe.isPresent()) {
-            return existingPieceJointe.get();
-        }
-        
-        // Create new one if not found
-        PieceJointe newPieceJointe = new PieceJointe();
-        newPieceJointe.setNomFichier("form_data_" + documentRequis.getNomDocument() + ".json");
-        newPieceJointe.setTypeDocument("FORM_DATA");
-        newPieceJointe.setStatus(PieceJointe.DocumentStatus.COMPLETE);
-        newPieceJointe.setDateUpload(LocalDateTime.now());
-        newPieceJointe.setDossier(dossier);
-        newPieceJointe.setDocumentRequis(documentRequis);
-        newPieceJointe.setUtilisateur(utilisateur);
-        return pieceJointeRepository.save(newPieceJointe);
+        String statusMessage = getStatusMessage(dossier.getStatus());
+        String nextAction = getNextAction(dossier.getStatus(), canEdit);
+
+        return DossierSummaryDTO.builder()
+                .id(dossier.getId())
+                .numeroDossier(dossier.getNumeroDossier())
+                .saba(dossier.getSaba())
+                .reference(dossier.getReference())
+                .status(dossier.getStatus().name())
+                .dateCreation(dossier.getDateCreation())
+                .agriculteurNom(dossier.getAgriculteur().getNom())
+                .agriculteurPrenom(dossier.getAgriculteur().getPrenom())
+                .agriculteurCin(dossier.getAgriculteur().getCin())
+                .agriculteurTelephone(dossier.getAgriculteur().getTelephone())
+                .rubriqueDesignation(dossier.getSousRubrique().getRubrique().getDesignation())
+                .sousRubriqueDesignation(dossier.getSousRubrique().getDesignation())
+                .antenneDesignation(dossier.getAntenne().getDesignation())
+                .montantDemande(dossier.getMontantSubvention() != null ? dossier.getMontantSubvention().doubleValue() : null)
+                .canEdit(canEdit)
+                .canSubmit(canSubmit)
+                .statusMessage(statusMessage)
+                .nextAction(nextAction)
+                .build();
     }
 
-    private String saveOrUpdateFormDataAsJsonFile(Map<String, Object> formData, String subDirectory, 
-                                        String documentName, Long dossierId, Long documentRequisId,
-                                        String existingFilePath) {
+    private String getStatusMessage(Dossier.DossierStatus status) {
+        switch (status) {
+            case DRAFT:
+                return "Dossier en cours de création - Remplissez les documents requis";
+            case SUBMITTED:
+                return "Dossier soumis au GUC - En attente de traitement";
+            case IN_REVIEW:
+                return "Dossier en cours d'examen";
+            case RETURNED_FOR_COMPLETION:
+                return "Dossier retourné - Compléments requis";
+            case APPROVED:
+                return "Dossier approuvé";
+            case REJECTED:
+                return "Dossier rejeté";
+            default:
+                return "Statut: " + status.name();
+        }
+    }
+
+    private String getNextAction(Dossier.DossierStatus status, boolean canEdit) {
+        if (!canEdit) {
+            return "Consultation uniquement";
+        }
+        
+        switch (status) {
+            case DRAFT:
+                return "Remplir les documents et soumettre";
+            case RETURNED_FOR_COMPLETION:
+                return "Compléter les documents manquants";
+            default:
+                return "Aucune action disponible";
+        }
+    }
+
+    private DocumentWithPiecesDTO buildDocumentWithPieces(DocumentRequis documentRequis, Long dossierId) {
+        List<PieceJointe> pieces = pieceJointeRepository
+                .findByDossierIdAndDocumentRequisId(dossierId, documentRequis.getId());
+
+        List<PieceJointeDTO> pieceDTOs = pieces.stream()
+                .map(this::mapToPieceJointeDTO)
+                .collect(Collectors.toList());
+
+        Map<String, Object> formStructure = parseFormStructure(documentRequis.getLocationFormulaire());
+        String status = determineDocumentStatus(documentRequis, pieces);
+        DocumentProgressDTO progress = calculateDocumentProgress(documentRequis.getId(), dossierId);
+
+        return DocumentWithPiecesDTO.builder()
+                .documentRequisId(documentRequis.getId())
+                .nomDocument(documentRequis.getNomDocument())
+                .description(documentRequis.getDescription())
+                .obligatoire(documentRequis.getObligatoire())
+                .locationFormulaire(documentRequis.getLocationFormulaire())
+                .pieces(pieceDTOs)
+                .status(status)
+                .progress(progress)
+                .formStructure(formStructure)
+                .build();
+    }
+
+    private PieceJointeDTO mapToPieceJointeDTO(PieceJointe pieceJointe) {
+        return PieceJointeDTO.builder()
+                .id(pieceJointe.getId())
+                .nomFichier(pieceJointe.getNomFichier())
+                .cheminFichier(pieceJointe.getCheminFichier())
+                .documentType(pieceJointe.getDocumentType())
+                .title(pieceJointe.getTitle())
+                .description(pieceJointe.getDescription())
+                .status(pieceJointe.getStatus())
+                .isRequired(pieceJointe.getIsRequired())
+                .dateUpload(pieceJointe.getDateUpload())
+                .lastEdited(pieceJointe.getLastEdited())
+                .utilisateurNom(pieceJointe.getUtilisateur().getNom() + " " + pieceJointe.getUtilisateur().getPrenom())
+                .formData(pieceJointe.getFormDataAsMap())
+                .hasFile(pieceJointe.hasFile())
+                .hasFormData(pieceJointe.hasFormData())
+                .canEdit(true) // Will be determined by business logic
+                .canDelete(true)
+                .canDownload(pieceJointe.hasFile())
+                .build();
+    }
+
+    private Map<String, Object> parseFormStructure(String jsonFilePath) {
+        if (jsonFilePath == null || jsonFilePath.isEmpty()) {
+            return new HashMap<>();
+        }
         try {
-            String fileName;
-            
-            // If existing file exists, reuse the same name and delete old file
-            if (existingFilePath != null && !existingFilePath.isEmpty()) {
-                Path existingPath = Paths.get(existingFilePath);
-                fileName = existingPath.getFileName().toString();
-                
-                // Delete old file first
-                Path fullExistingPath = getStorageLocation().resolve(existingFilePath);
-                Files.deleteIfExists(fullExistingPath);
-                
-                log.info("Deleted existing form data file: {}", fullExistingPath);
-            } else {
-                // Create new filename
-                String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd_HHmmss"));
-                fileName = "form_data_" + documentName.replaceAll("[^a-zA-Z0-9]", "_") + 
-                        "_" + dossierId + "_" + documentRequisId + "_" + timestamp + ".json";
-            }
-            
-            Path targetLocation = getStorageLocation().resolve(subDirectory);
-            Files.createDirectories(targetLocation);
-            
-            String jsonContent = objectMapper.writeValueAsString(formData);
-            
-            Path filePath = targetLocation.resolve(fileName);
-            Files.write(filePath, jsonContent.getBytes());
-            
-            String relativePath = subDirectory + "/" + fileName;
-            log.info("Saved form data to: {}", relativePath);
-            
-            return relativePath;
-            
-        } catch (IOException ex) {
-            throw new RuntimeException("Could not save form data as JSON file. Please try again!", ex);
+            String jsonContent = Files.readString(Paths.get(getStorageLocation().toString(), jsonFilePath));
+            return objectMapper.readValue(jsonContent, new TypeReference<Map<String, Object>>() {});
+        } catch (Exception e) {
+            log.warn("Erreur lors du parsing de la structure de formulaire: {}", jsonFilePath, e);
+            return new HashMap<>();
         }
     }
 
-    // File storage methods
-    private String storeFile(MultipartFile file, String subDirectory) {
+    private String determineDocumentStatus(DocumentRequis documentRequis, List<PieceJointe> pieces) {
+        boolean hasCompletePieces = pieces.stream()
+                .anyMatch(p -> p.getStatus() == PieceJointe.DocumentStatus.COMPLETE);
+        
+        if (documentRequis.getObligatoire()) {
+            return hasCompletePieces ? "COMPLETE" : "MISSING";
+        } else {
+            return hasCompletePieces ? "COMPLETE" : "OPTIONAL";
+        }
+    }
+
+    private DocumentProgressDTO calculateDocumentProgress(Long documentRequisId, Long dossierId) {
+        List<PieceJointe> pieces = pieceJointeRepository
+                .findByDossierIdAndDocumentRequisId(dossierId, documentRequisId);
+
+        DocumentRequis documentRequis = documentRequisRepository.findById(documentRequisId).orElse(null);
+        if (documentRequis == null) {
+            return DocumentProgressDTO.builder().build();
+        }
+
+        boolean hasFiles = pieces.stream().anyMatch(PieceJointe::hasFile);
+        boolean hasFormData = pieces.stream().anyMatch(PieceJointe::hasFormData);
+        boolean isComplete = pieces.stream().anyMatch(p -> p.getStatus() == PieceJointe.DocumentStatus.COMPLETE);
+
+        List<String> completedElements = new ArrayList<>();
+        List<String> missingElements = new ArrayList<>();
+
+        if (hasFiles) {
+            completedElements.add("Documents téléchargés");
+        }
+        if (hasFormData) {
+            completedElements.add("Données formulaire saisies");
+        }
+
+        if (documentRequis.getObligatoire() && !isComplete) {
+            missingElements.add("Document ou données requis");
+        }
+
+        double completionPercentage = isComplete ? 100.0 : (hasFiles || hasFormData ? 50.0 : 0.0);
+
+        return DocumentProgressDTO.builder()
+                .isRequired(documentRequis.getObligatoire())
+                .isComplete(isComplete)
+                .hasFiles(hasFiles)
+                .hasFormData(hasFormData)
+                .completionPercentage(completionPercentage)
+                .nextStep(isComplete ? "Terminé" : "Télécharger document ou remplir formulaire")
+                .missingElements(missingElements)
+                .completedElements(completedElements)
+                .build();
+    }
+
+    private DocumentStatisticsDTO calculateStatistics(List<DocumentWithPiecesDTO> documents) {
+        int total = documents.size();
+        int completed = (int) documents.stream().filter(doc -> "COMPLETE".equals(doc.getStatus())).count();
+        int missing = (int) documents.stream().filter(doc -> "MISSING".equals(doc.getStatus())).count();
+        int optional = (int) documents.stream().filter(doc -> !doc.getObligatoire()).count();
+        
+        double percentage = total > 0 ? (double) completed / total * 100 : 0;
+
+        int totalPieces = documents.stream().mapToInt(doc -> doc.getPieces().size()).sum();
+        int piecesWithFiles = documents.stream()
+                .mapToInt(doc -> (int) doc.getPieces().stream().filter(PieceJointeDTO::getHasFile).count())
+                .sum();
+        int piecesWithFormData = documents.stream()
+                .mapToInt(doc -> (int) doc.getPieces().stream().filter(PieceJointeDTO::getHasFormData).count())
+                .sum();
+
+        return DocumentStatisticsDTO.builder()
+                .totalDocuments(total)
+                .documentsCompletes(completed)
+                .documentsManquants(missing)
+                .documentsOptionnels(optional)
+                .pourcentageCompletion(percentage)
+                .totalPieces(totalPieces)
+                .piecesWithFiles(piecesWithFiles)
+                .piecesWithFormData(piecesWithFormData)
+                .build();
+    }
+
+    // File handling methods
+    private String storeFile(MultipartFile file, Long dossierId, String subFolder) {
         try {
             String fileName = generateUniqueFileName(file.getOriginalFilename());
+            String subDirectory = "dossiers/dossier_" + dossierId + "/" + subFolder;
             
             Path targetLocation = getStorageLocation().resolve(subDirectory);
             Files.createDirectories(targetLocation);
@@ -413,18 +635,7 @@ public class DocumentFillingService {
             return subDirectory + "/" + fileName;
             
         } catch (IOException ex) {
-            throw new RuntimeException("Could not store file " + file.getOriginalFilename() + ". Please try again!", ex);
-        }
-    }
-
-    private String createDossierDirectory(Long dossierId) {
-        String subDirectory = "dossiers/dossier_" + dossierId;
-        try {
-            Path targetLocation = getStorageLocation().resolve(subDirectory);
-            Files.createDirectories(targetLocation);
-            return subDirectory;
-        } catch (IOException ex) {
-            throw new RuntimeException("Could not create dossier directory for dossier " + dossierId, ex);
+            throw new RuntimeException("Could not store file " + file.getOriginalFilename(), ex);
         }
     }
 
@@ -470,292 +681,6 @@ public class DocumentFillingService {
             return nameWithoutExtension + "_" + timestamp + "_" + randomSuffix + extension;
         } else {
             return "file_" + timestamp + "_" + randomSuffix;
-        }
-    }
-
-    // Build response methods
-    private DossierSummaryDTO buildDossierSummary(Dossier dossier, String userEmail) {
-        try {
-            Utilisateur utilisateur = utilisateurRepository.findByEmail(userEmail)
-                    .orElseThrow(() -> new RuntimeException("Utilisateur non trouvé"));
-            
-            boolean canEdit = canModifyDossier(dossier, utilisateur);
-            boolean canSubmit = canEdit && dossier.getStatus() == Dossier.DossierStatus.DRAFT;
-            
-            String statusMessage = getStatusMessage(dossier.getStatus());
-            String nextAction = getNextAction(dossier.getStatus(), canEdit);
-
-            return DossierSummaryDTO.builder()
-                    .id(dossier.getId())
-                    .numeroDossier(dossier.getNumeroDossier())
-                    .saba(dossier.getSaba())
-                    .reference(dossier.getReference())
-                    .status(dossier.getStatus().name())
-                    .dateCreation(dossier.getDateCreation())
-                    .agriculteurNom(dossier.getAgriculteur().getNom())
-                    .agriculteurPrenom(dossier.getAgriculteur().getPrenom())
-                    .agriculteurCin(dossier.getAgriculteur().getCin())
-                    .agriculteurTelephone(dossier.getAgriculteur().getTelephone())
-                    .rubriqueDesignation(dossier.getSousRubrique().getRubrique().getDesignation())
-                    .sousRubriqueDesignation(dossier.getSousRubrique().getDesignation())
-                    .antenneDesignation(dossier.getAntenne().getDesignation())
-                    .montantDemande(dossier.getMontantSubvention() != null ? dossier.getMontantSubvention().doubleValue() : null)
-                    .canEdit(canEdit)
-                    .canSubmit(canSubmit)
-                    .statusMessage(statusMessage)
-                    .nextAction(nextAction)
-                    .build();
-        } catch (Exception e) {
-            log.warn("Erreur lors de la construction du résumé du dossier", e);
-            // Return basic info without user-specific data
-            return DossierSummaryDTO.builder()
-                    .id(dossier.getId())
-                    .numeroDossier(dossier.getNumeroDossier())
-                    .saba(dossier.getSaba())
-                    .reference(dossier.getReference())
-                    .status(dossier.getStatus().name())
-                    .dateCreation(dossier.getDateCreation())
-                    .agriculteurNom(dossier.getAgriculteur().getNom())
-                    .agriculteurPrenom(dossier.getAgriculteur().getPrenom())
-                    .agriculteurCin(dossier.getAgriculteur().getCin())
-                    .agriculteurTelephone(dossier.getAgriculteur().getTelephone())
-                    .rubriqueDesignation(dossier.getSousRubrique().getRubrique().getDesignation())
-                    .sousRubriqueDesignation(dossier.getSousRubrique().getDesignation())
-                    .antenneDesignation(dossier.getAntenne().getDesignation())
-                    .montantDemande(dossier.getMontantSubvention() != null ? dossier.getMontantSubvention().doubleValue() : null)
-                    .canEdit(false)
-                    .canSubmit(false)
-                    .statusMessage("Consultation uniquement")
-                    .nextAction("Aucune action disponible")
-                    .build();
-        }
-    }
-
-    private String getStatusMessage(Dossier.DossierStatus status) {
-        switch (status) {
-            case DRAFT:
-                return "Dossier en cours de création - Remplissez les documents requis";
-            case SUBMITTED:
-                return "Dossier soumis au GUC - En attente de traitement";
-            case IN_REVIEW:
-                return "Dossier en cours d'examen";
-            case RETURNED_FOR_COMPLETION:
-                return "Dossier retourné - Compléments requis";
-            case APPROVED:
-                return "Dossier approuvé";
-            case REJECTED:
-                return "Dossier rejeté";
-            default:
-                return "Statut: " + status.name();
-        }
-    }
-
-    private String getNextAction(Dossier.DossierStatus status, boolean canEdit) {
-        if (!canEdit) {
-            return "Consultation uniquement";
-        }
-        
-        switch (status) {
-            case DRAFT:
-                return "Remplir les documents et soumettre";
-            case RETURNED_FOR_COMPLETION:
-                return "Compléter les documents manquants";
-            default:
-                return "Aucune action disponible";
-        }
-    }
-
-    private DocumentRequisWithFilesDTO buildDocumentWithFiles(DocumentRequis documentRequis, Long dossierId) {
-        List<PieceJointe> pieceJointes = pieceJointeRepository
-                .findByDossierIdAndDocumentRequisId(dossierId, documentRequis.getId());
-
-        // Group files by type - FIXED: Only include actual uploaded files, not form data
-        List<PieceJointeGroupDTO> fichierGroups = new ArrayList<>();
-        
-        // Group 1: Only actual uploaded files (exclude form data files)
-        List<PieceJointeDTO> uploadedFiles = pieceJointes.stream()
-                .filter(pj -> pj.getCheminFichier() != null && !"FORM_DATA".equals(pj.getTypeDocument()))
-                .map(this::buildPieceJointeDTO)
-                .collect(Collectors.toList());
-        
-        if (!uploadedFiles.isEmpty()) {
-            PieceJointeGroupDTO filesGroup = PieceJointeGroupDTO.builder()
-                    .groupName("Documents téléchargés")
-                    .groupType("FILES")
-                    .files(uploadedFiles)
-                    .totalFiles(uploadedFiles.size())
-                    .totalSize(uploadedFiles.stream().mapToLong(f -> f.getTailleFichier() != null ? f.getTailleFichier() : 0L).sum())
-                    .lastUpdated(uploadedFiles.stream().map(PieceJointeDTO::getDateUpload).max(LocalDateTime::compareTo).orElse(null))
-                    .isComplete(true)
-                    .groupStatus("COMPLETE")
-                    .build();
-            fichierGroups.add(filesGroup);
-        }
-
-        // Get form data separately 
-        Map<String, Object> formData = pieceJointes.stream()
-                .filter(pj -> pj.getCheminDonneesFormulaire() != null)
-                .findFirst()
-                .map(pj -> parseFormDataFromFile(pj.getCheminDonneesFormulaire()))
-                .orElse(new HashMap<>());
-
-        Map<String, Object> formStructure = parseFormStructure(documentRequis.getLocationFormulaire());
-        String status = determineDocumentStatus(documentRequis, uploadedFiles, formData);
-
-        // Create progress info
-        DocumentProgressDTO progress = DocumentProgressDTO.builder()
-                .isRequired(documentRequis.getObligatoire())
-                .isComplete("COMPLETE".equals(status))
-                .hasFiles(!uploadedFiles.isEmpty())
-                .hasFormData(!formData.isEmpty())
-                .completionPercentage("COMPLETE".equals(status) ? 100.0 : 0.0)
-                .nextStep(status.equals("COMPLETE") ? "Completed" : "Upload documents or fill form")
-                .missingElements(status.equals("MISSING") ? List.of("Documents ou formulaire requis") : List.of())
-                .completedElements(status.equals("COMPLETE") ? List.of("Documents téléchargés ou formulaire rempli") : List.of())
-                .build();
-
-        return DocumentRequisWithFilesDTO.builder()
-                .id(documentRequis.getId())
-                .nomDocument(documentRequis.getNomDocument())
-                .description(documentRequis.getDescription())
-                .obligatoire(documentRequis.getObligatoire())
-                .locationFormulaire(documentRequis.getLocationFormulaire())
-                .formStructure(formStructure)
-                .fichierGroups(fichierGroups)
-                .formData(formData)
-                .status(status)
-                .progress(progress)
-                .documentCategory("REQUIRED")
-                .order(1)
-                .build();
-    }
-
-    private PieceJointeDTO buildPieceJointeDTO(PieceJointe pieceJointe) {
-        return PieceJointeDTO.builder()
-                .id(pieceJointe.getId())
-                .nomFichier(pieceJointe.getNomFichier())
-                .cheminFichier(pieceJointe.getCheminFichier())
-                .typeDocument(pieceJointe.getTypeDocument())
-                .status(pieceJointe.getStatus().name())
-                .dateUpload(pieceJointe.getDateUpload())
-                .utilisateurNom(pieceJointe.getUtilisateur().getNom() + " " + pieceJointe.getUtilisateur().getPrenom())
-                .tailleFichier(calculateFileSize(pieceJointe.getCheminFichier()))
-                .formatFichier(extractFileExtension(pieceJointe.getNomFichier()))
-                .displayName(pieceJointe.getNomFichier())
-                .description("Document téléchargé")
-                .canDelete(true) // Will be determined by business logic
-                .canDownload(true)
-                .thumbnailUrl(null) // To be implemented for images
-                .build();
-    }
-
-    private Map<String, Object> parseFormStructure(String jsonFilePath) {
-        if (jsonFilePath == null || jsonFilePath.isEmpty()) {
-            return new HashMap<>();
-        }        try {
-            String jsonContent = Files.readString(Paths.get(getStorageLocation().toString(), jsonFilePath));
-            return objectMapper.readValue(jsonContent, new TypeReference<Map<String, Object>>() {});
-        } catch (Exception e) {
-            log.warn("Erreur lors du parsing de la structure de formulaire: {}", jsonFilePath, e);
-            return new HashMap<>();
-        }
-    }
-
-    private Map<String, Object> parseFormDataFromFile(String formDataFilePath) {        try {
-            String jsonContent = Files.readString(Paths.get(getStorageLocation().toString(), formDataFilePath));
-            return objectMapper.readValue(jsonContent, new TypeReference<Map<String, Object>>() {});
-        } catch (Exception e) {
-            log.warn("Erreur lors du parsing des données de formulaire depuis le fichier: {}", formDataFilePath, e);
-            return new HashMap<>();
-        }
-    }
-
-    private String determineDocumentStatus(DocumentRequis documentRequis, List<PieceJointeDTO> fichiers, Map<String, Object> formData) {
-        boolean hasFiles = !fichiers.isEmpty();
-        boolean hasFormData = !formData.isEmpty();
-        
-        if (documentRequis.getObligatoire()) {
-            if (hasFiles || hasFormData) {
-                return "COMPLETE";
-            } else {
-                return "MISSING";
-            }
-        } else {
-            return hasFiles || hasFormData ? "COMPLETE" : "PENDING";
-        }
-    }
-
-    private DocumentStatisticsDTO calculateStatistics(List<DocumentRequisWithFilesDTO> documents) {
-        int total = documents.size();
-        int completed = (int) documents.stream().filter(doc -> "COMPLETE".equals(doc.getStatus())).count();
-        int missing = (int) documents.stream().filter(doc -> "MISSING".equals(doc.getStatus())).count();
-        int optional = (int) documents.stream().filter(doc -> !doc.getObligatoire()).count();
-        
-        double percentage = total > 0 ? (double) completed / total * 100 : 0;
-
-        // Calculate file statistics - only actual files, not form data
-        int totalFiles = documents.stream()
-                .mapToInt(doc -> doc.getFichierGroups().stream()
-                        .mapToInt(group -> group.getTotalFiles() != null ? group.getTotalFiles() : 0)
-                        .sum())
-                .sum();
-
-        long totalFileSize = documents.stream()
-                .mapToLong(doc -> doc.getFichierGroups().stream()
-                        .mapToLong(group -> group.getTotalSize() != null ? group.getTotalSize() : 0L)
-                        .sum())
-                .sum();
-
-        int formsCompleted = (int) documents.stream()
-                .filter(doc -> doc.getFormData() != null && !doc.getFormData().isEmpty())
-                .count();
-
-        int formsTotal = documents.size(); // All documents can potentially have forms
-
-        return DocumentStatisticsDTO.builder()
-                .totalDocuments(total)
-                .documentsCompletes(completed)
-                .documentsManquants(missing)
-                .documentsOptionnels(optional)
-                .pourcentageCompletion(percentage)
-                .totalFiles(totalFiles)
-                .totalFileSize(totalFileSize)
-                .formsCompleted(formsCompleted)
-                .formsTotal(formsTotal)
-                .build();
-    }
-
-    private Long calculateFileSize(String filePath) {
-        if (filePath == null) return 0L;
-        try {
-            return Files.size(Paths.get(getStorageLocation().toString(), filePath));
-        } catch (IOException e) {
-            return 0L;
-        }
-    }
-
-    private String extractFileExtension(String fileName) {
-        if (fileName == null || !fileName.contains(".")) {
-            return "";
-        }
-        return fileName.substring(fileName.lastIndexOf(".") + 1).toLowerCase();
-    }    private void createAuditTrail(String action, Long dossierId, String description, String userEmail) {
-        try {
-            Utilisateur utilisateur = utilisateurRepository.findByEmail(userEmail).orElse(null);
-            
-            AuditTrail auditTrail = new AuditTrail();
-            auditTrail.setTimestamp(LocalDateTime.now());
-            auditTrail.setUserId(utilisateur != null ? utilisateur.getId() : null);
-            auditTrail.setAction(action);
-            auditTrail.setEntityType("Dossier");
-            auditTrail.setEntityId(dossierId);
-            auditTrail.setOldValue(null);
-            auditTrail.setNewValue(null);
-            auditTrail.setDetails(description);
-            
-            auditTrailRepository.save(auditTrail);
-        } catch (Exception e) {
-            log.warn("Erreur lors de la création de l'audit trail", e);
         }
     }
 }
